--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,26 @@ code {
   height: 16px;
   margin-right: 10px;
 }
+
+
+/* CUSTOM */
+
+.smalltext {
+  font-size: 12px;
+  margin: 10px 0;
+}
+.coinflipper {
+  background: #eee;
+  padding: 10px;
+  margin: 10px 10px 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+}
+.bold {
+  font-weight: bold;
+}
+.subtitle {
+  margin:-20px 0 0 0;
+  font-size: 12px;
+  color: #999;
+}
